--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
     "no-unused-vars": "error",
     "spaced-comment": "error",
     "quotes": ["error", "single"],
-    "no-duplicate-imports": "error"
+    "no-duplicate-imports": "error",
+    "react/prop-types": "off"
   },
   "settings": {
     "react": {
