--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "dev": "webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
     "server": "json-server server.json --port 3333",
-    "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "lint": "eslint  --fix --ext .js,.jsx,.ts,.tsx ."
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
